added CpuQuota setting to hostconfig
